@@ -3,7 +3,9 @@ package no.bankaxept.epayment.client.test.tokenrequestor;
 import static no.bankaxept.epayment.client.test.Verifier.verifyBadRequest;
 
 import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.net.URI;
 import java.util.List;
 import java.util.UUID;
 import java.util.concurrent.Flow;
@@ -14,23 +16,29 @@ import org.junit.jupiter.api.Test;
 
 public class TokenRequestorClientIT {
 
-  private TokenRequestorClient testClient() throws MalformedURLException {
-    return new TokenRequestorClient(
-        new URL("https://api.epp.stoetest.cloud/access-token/v1/accesstoken"),
-        new URL("https://api.epp.stoetest.cloud/token-requestor"),
-        System.getenv("CLIENT_ID"),
-        System.getenv("CLIENT_SECRET")
-    );
+  private final TokenRequestorClient testClient;
+
+  {
+    try {
+      testClient = new TokenRequestorClient(
+          new URI("https://api.epp.stoetest.cloud/access-token/v1/accesstoken").toURL(),
+          new URI("https://api.epp.stoetest.cloud/token-requestor").toURL(),
+          System.getenv("CLIENT_ID"),
+          System.getenv("CLIENT_SECRET")
+      );
+    } catch (MalformedURLException | URISyntaxException e) {
+      throw new RuntimeException(e);
+    }
   }
 
   @Test
-  public void enrolCardRequest() throws MalformedURLException {
-    verifyBadRequest(enrolCardRequest(testClient()), "Invalid bank identifier 090909");
+  public void enrolCardRequest() {
+    verifyBadRequest(enrolCardRequest(testClient), "Invalid bank identifier 090909");
   }
 
   @Test
-  public void eligibleBanksRequest() throws MalformedURLException {
-    verifyBadRequest(testClient().eligibleBanks(List.of("090909")));
+  public void eligibleBanksRequest() {
+    verifyBadRequest(testClient.eligibleBanks(List.of("090909")));
   }
 
   private Flow.Publisher<RequestStatus> enrolCardRequest(TokenRequestorClient client) {
